Upgrade 28 lessons to premium beginner-friendly format with line-by-line code annotations
Expanded thin lessons across 15 modules with detailed explanations:
- Microservices: event-sourcing, data-consistency, strangler-fig
- JVM: jvm-memory, jfr-profiling, heap-analysis, perf-tuning, garbage-collection
- Java: jvm-gc, networking, modules, test-doubles
- Spring Security: headers, exception-handling, session-management, production
- Spring Boot: boot-project; Spring Data: data-overview; Spring AOP: aspect-ordering
- GraalVM: native-performance; Spring Testing: awaitility, test-properties
- SQL: explain-analyze; Kafka: production; MongoDB: operations; AI: overview
- Spring Core: SpEL, configuration

Each lesson now includes: beginner-friendly concept explanation, code with
line-by-line annotations, real-world organizational scenarios, and common
mistakes table.

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>